macOS offline: restore Universal (arm64+x64) build configuration

--- a/.github/workflows/macos-offline.yml
+++ b/.github/workflows/macos-offline.yml
@@ -7,8 +7,18 @@ on:
 
 jobs:
   build-backend:
-    name: Build backend (PyInstaller) arm64
-    runs-on: macos-latest
+    name: Build backend (PyInstaller) ${{ matrix.runner }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          # Intel runner
+          - runner: macos-12
+            arch: x64
+          # Apple Silicon runner
+          - runner: macos-latest
+            arch: arm64
+    runs-on: ${{ matrix.runner }}
 
     defaults:
       run:
@@ -46,7 +56,7 @@ jobs:
           rm -rf vendor
           mkdir -p vendor
 
-          # ffmpeg/ffprobe (macOS universal build)
+          # ffmpeg/ffprobe (macOS universal build) - evermeet provides universal binaries
           curl -L -o vendor/ffmpeg.zip https://evermeet.cx/ffmpeg/ffmpeg-7.1.1.zip
           curl -L -o vendor/ffprobe.zip https://evermeet.cx/ffmpeg/ffprobe-7.1.1.zip
           ditto -xk vendor/ffmpeg.zip vendor/_ffmpeg
@@ -60,8 +70,9 @@ jobs:
           curl -L -o vendor/yt-dlp https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp_macos
           chmod +x vendor/yt-dlp
 
-          # deno (pick aarch64 for Apple Silicon)
-          curl -L -o vendor/deno.zip "https://github.com/denoland/deno/releases/latest/download/deno-aarch64-apple-darwin.zip"
+          # deno (for yt-dlp EJS runtime). pick arch-specific binary.
+          DENO_ARCH="x86_64"; if [ "${{ matrix.arch }}" = "arm64" ]; then DENO_ARCH="aarch64"; fi
+          curl -L -o vendor/deno.zip "https://github.com/denoland/deno/releases/latest/download/deno-${DENO_ARCH}-apple-darwin.zip"
           ditto -xk vendor/deno.zip vendor/_deno
           cp -f vendor/_deno/deno vendor/deno
           chmod +x vendor/deno
@@ -78,25 +89,25 @@ jobs:
       - name: Stage backend into backend-bin/
         run: |
           set -euxo pipefail
-          mkdir -p backend-bin/darwin-arm64
+          mkdir -p backend-bin/darwin-${{ matrix.arch }}
           SRC="backend/dist/holy-backend/holy-backend"
           if [ ! -f "$SRC" ]; then
             echo "PyInstaller output missing: $SRC"; ls -la backend/dist/holy-backend || true; exit 1
           fi
-          cp -f "$SRC" "backend-bin/darwin-arm64/holy-backend"
-          chmod +x "backend-bin/darwin-arm64/holy-backend"
+          cp -f "$SRC" "backend-bin/darwin-${{ matrix.arch }}/holy-backend"
+          chmod +x "backend-bin/darwin-${{ matrix.arch }}/holy-backend"
 
       - name: Upload backend artifact
         uses: actions/upload-artifact@v4
         with:
-          name: backend-darwin-arm64
+          name: backend-darwin-${{ matrix.arch }}
           path: |
-            backend-bin/darwin-arm64/holy-backend
+            backend-bin/darwin-${{ matrix.arch }}/holy-backend
             backend/vendor/**
             frontend/out/**
 
   build-dmg:
-    name: Build macOS arm64 DMG
+    name: Build macOS Universal DMG
     needs: [build-backend]
     runs-on: macos-latest
     defaults:
@@ -118,18 +129,20 @@ jobs:
         with:
           path: _artifacts
 
-      - name: Assemble resources
+      - name: Assemble resources (backend-bin + vendor + frontend/out)
         run: |
           set -euxo pipefail
-          mkdir -p backend-bin/darwin-arm64
+          mkdir -p backend-bin/darwin-x64 backend-bin/darwin-arm64
+          cp -f _artifacts/backend-darwin-x64/backend-bin/darwin-x64/holy-backend backend-bin/darwin-x64/holy-backend
           cp -f _artifacts/backend-darwin-arm64/backend-bin/darwin-arm64/holy-backend backend-bin/darwin-arm64/holy-backend
-          chmod +x backend-bin/darwin-arm64/holy-backend
+          chmod +x backend-bin/darwin-x64/holy-backend backend-bin/darwin-arm64/holy-backend
 
+          # Use vendor + frontend/out from one artifact (they should be identical across arch)
           rm -rf backend/vendor frontend/out
           cp -R _artifacts/backend-darwin-arm64/backend/vendor backend/vendor
           cp -R _artifacts/backend-darwin-arm64/frontend/out frontend/out
 
-      - name: Build Electron macOS DMG (arm64)
+      - name: Build Electron macOS DMG (universal)
         working-directory: mac-app
         run: |
           npm ci
@@ -138,7 +151,7 @@ jobs:
       - name: Upload DMG
         uses: actions/upload-artifact@v4
         with:
-          name: HolyKaraoke-macos-arm64
+          name: HolyKaraoke-macos-universal
           path: |
             mac-app/dist/*.dmg
             mac-app/dist/*.yml
